fix: CORS 환경변수 동적 설정 + Railway DB 연결 가이드
- SecurityConfig: CORS 허용 도메인을 환경변수(CORS_ALLOWED_ORIGINS)로 관리
  → Railway에서 Vercel 주소를 동적으로 추가 가능
- application.yml: cors.allowed-origins 환경변수 참조 추가